Fix Entry Point and Initialization

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 CHANGES
 =======
 
+* No Really, Switch to Pbr
 * Fix Member Variable Access Error
 * Add requirements.txt File
 * Initial "Import" of Client Scripts
